--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "pdfstamper",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "netlify dev",
+    "build": "echo \"Nothing to build, skipping.\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
